--- a/studentinterface.css
+++ b/studentinterface.css
@@ -91,17 +91,17 @@ margin: 0;
   justify-content: space-between;
   gap: 20px;
   margin-top: 20px;
+  min-height: 400px;
 }
 
-.left-column {
-  flex: 1;
-  background-color: #7a3e3e;
-  padding: 15px;
+.poster-image {
+  display: flex;
+  width: 350px;
+  height: 350px;
   border-radius: 12px;
-}
-
-.left-column h3 {
-  margin-bottom: 10px;
+  margin-left: 80px;
+  justify-content: center;
+  text-align: center;
 }
 
 .tutor-list {
@@ -114,14 +114,6 @@ margin: 0;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 8px;
-}
-
-.middle-column {
-  flex: 0.5;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  justify-content: center;
 }
 
 .small-button {
